--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,19 @@
+# Server Configuration
+NODE_ENV=development
 PORT=5000
-MONGO_URI=mongodb+srv://username:password@cluster.mongodb.net/yyctrack?retryWrites=true&w=majority
-JWT_SECRET=your_super_secret_jwt_key_here_change_this
-JWT_EXPIRE=7d
+
+#MongoDB Atlas
+MONGODB_URI=
+
+# JWT Secret 
+JWT_SECRET=
+JWT_EXPIRE=
+JWT_COOKIE_EXPIRE=
+
+# Google OAuth from Google Cloud Console
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
+GOOGLE_CALLBACK_URL=
+
+# Frontend URL (for CORS and redirects)
+CLIENT_URL=http://localhost:5173
